# news-aggregator

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  INSTALLATION.md  Makefile  README.md  SETUP_STATUS.md  SUPABASE_DEPLOYMENT.md  main.py  pyproject.toml  render.yaml  requirements.txt  source_profiles.yaml  vercel.json
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py  __main__.py  config.py  main.py  models.py
backend/data/: vector_index.meta.json
backend/tests/: __init__.py
data/: app.db  sample_articles.py  vector_index.meta.json
data/cookies/: nunl_rss.json
data/exports/: event_65_20251003192154.csv
database/: README.md  schema.sql
database/migrations/: 002_international_perspectives.sql  003_article_bias_analysis.sql
docs/: ML_SETUP.md  PRD.md  adding-news-sources.md  architecture.md  context-events.md
docs/stories/: 6.1-category-filter.md  stories.md
frontend/: .env.example  .env.local  .prettierignore  jest.config.cjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/__tests__/: EventDetailComponents.test.tsx  EventFeed.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimatedBackground.tsx  ArticleCard.tsx  ArticleList.tsx  ArticleLookupContext.tsx  BestGelezen.tsx  BiasAnalysisModal.tsx  BiasScoreBadge.tsx  CategoryNav.tsx  ClusterCard.tsx  ClusterGrid.tsx  (+28 more)
scripts/: backfill_insights.py  cleanup_ad_duplicates.py  create_supabase_tables.py  detect_false_negatives.py  enrich_all.py  evaluate_clustering.py  generate_test_insight.py  prime_consent.py  recluster_articles.py  reenrich_with_llm.py  refresh_cookies.py  smoke_test.py  sync_supabase_to_sqlite.py  test_coverage_gaps.py  test_entity_penalty.py  test_insight_generation.py  test_international_enrichment.py  test_llm_classification.py  test_nieuwrechts_edge_case.py  test_rss_feeds.py  update_spectrum_scores.py
src/: __init__.py  models.py  pipeline.py
(+168 files in other folders)
